--- a/frontend/src/pages/Logon/styles.css
+++ b/frontend/src/pages/Logon/styles.css
@@ -28,7 +28,7 @@ h1 {
     font-size: 32px;
     margin-bottom: 32px;
 }
-/** foi para global.css para virar function
+/** foi para global.css para virar classe back-link
 .Logon-container section.form form a {
     display: flex;
     align-items: center;
