--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -31,6 +31,18 @@ form input {
     padding: 0 24px;
 }
 
+form textarea {
+    width: 100%;
+    resize: vertical;
+    min-width: 140px;
+    height: 60px;
+    color: #333;
+    border: 1px solid #dcdce6;
+    border-radius: 8px;
+    padding: 16px 24px;
+    line-height: 24px;
+}
+
 .button {
     width: 100%;
     height: 60px;
@@ -49,7 +61,7 @@ form input {
 }
 
 .button:hover{
-    filter: brightness(70%);
+    filter: brightness(90%);
 }
 
 .back-link {
